--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -418,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "one_year_ago = pd.to_datetime(most_recent_date) - pd.DateOffset(days=365)\r\n",
+    "one_year_ago = pd.to_datetime(most_recent_date) - pd.DateOffset(days=365)\n",
     "one_year_ago_str = one_year_ago.strftime('%Y-%m-%d')"
    ]
   },
@@ -500,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   },
   "nteract": {
    "version": "0.12.3"
